--- a/0x02-i18n/templates/0-index.html
+++ b/0x02-i18n/templates/0-index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+    <title>Welcome to Holberton</title>
 </head>
 <body>
-    <h1>{{ greet }}</h1>
+    <h1>Hello world</h1>
 </body>
 </html>
