--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ _("home_title") }}t</title>
+    <title> {{ _("Welcome to Holberton") }}</title>
 </head>
 <body>
-    {{ _("home_header") }}
+    <h1>{{ _("Hello world!") }}</h1>
 </body>
 </html>
